--- a/ansible/templates/configuration/level0/launchpad/global_settings.tfvars.j2
+++ b/ansible/templates/configuration/level0/launchpad/global_settings.tfvars.j2
@@ -50,8 +50,8 @@ launchpad_key_names = {
 }
 
 tags = {
-  Project_Code               = "CAF-TF"
-  Name                       = "CAF Terraform Landingzones and solutions"
+  Project_Code               = "{{agency_code}}-{{project_code}}" # "CAF-TF"
+  Name                       = "{{project_code}} - CAF Terraform Landingzones and solutions"
   Data_Classification        = "Internal"
   Application_Classification = "Standard"
 }
