--- a/ansible/templates/configuration/level4/devops/container_groups.tfvars.j2
+++ b/ansible/templates/configuration/level4/devops/container_groups.tfvars.j2
@@ -45,10 +45,8 @@ container_groups = {
         }
 
         # sleep infinity - to avoid termination of container
-        # TODO: check why this is not working
+        # Overrides default command so things don't shut down after the process ends.
         commands = ["/bin/sh", "-c", "while sleep 1000; do :; done"]
-        # commands = ["/bin/bash", "-c", "echo hello; sleep 100000"]        
-        # commands = ["/bin/bash", "-c", "echo hello; sleep 100000; sleep infinity"]
 
         variables_from_command = {
           USERNAME = "variable=$(env | grep USERNAME | sed 's/.*=//' ) && jq -n --arg var $variable '{value: $var}'"
