--- a/ansible/templates/configuration/level4/project/aks/role_mapping.tfvars.j2
+++ b/ansible/templates/configuration/level4/project/aks/role_mapping.tfvars.j2
@@ -1,15 +1,15 @@
 # must grant contributor right to internet vnet inorder to create correct internal lb
 role_mapping = {
   built_in_role_mapping = {
-    resource_groups = {
-      "aks_re1" = {
-        "Reader" = {
-          aks_ingress_application_gateway_identities = {
-            keys = ["cluster_re1"]
-          }
-        }
-      }
-    }
+    # resource_groups = {
+    #   "aks_re1" = {
+    #     "Reader" = {
+    #       aks_ingress_application_gateway_identities = {
+    #         keys = ["cluster_re1"]
+    #       }
+    #     }
+    #   }
+    # }
     # application_gateway_platforms = {
     #   "agw" = {
     #     "Contributor" = {
@@ -19,20 +19,20 @@ role_mapping = {
     #     }
     #   }
     # }
-    managed_identities = {
-      "aks_usermsi" = {
-        "Managed Identity Operator" = {
-          aks_ingress_application_gateway_identities = {
-            keys = ["cluster_re1"]
-          }
-        }
-        "Contributor" = {
-          aks_ingress_application_gateway_identities = {
-            keys = ["cluster_re1"]
-          }
-        }        
-      }
-    }
+    # managed_identities = {
+    #   "aks_usermsi" = {
+    #     "Managed Identity Operator" = {
+    #       aks_ingress_application_gateway_identities = {
+    #         keys = ["cluster_re1"]
+    #       }
+    #     }
+    #     "Contributor" = {
+    #       aks_ingress_application_gateway_identities = {
+    #         keys = ["cluster_re1"]
+    #       }
+    #     }        
+    #   }
+    # }
     aks_clusters = {
       "cluster_re1" = {
         "Azure Kubernetes Service RBAC Cluster Admin" = {
