--- a/ansible/templates/configuration/level4/project/cosmosdb/resource_groups.tfvars.j2
+++ b/ansible/templates/configuration/level4/project/cosmosdb/resource_groups.tfvars.j2
@@ -1,5 +1,5 @@
 resource_groups = {
-  cosmodb_rg_re1 = {
+  cosmodb_re1 = {
     name = "cosmodb-re1"           
     region = "region1"    
     tags = { 
